--- a/index.css
+++ b/index.css
@@ -5,6 +5,7 @@
 
 body{
     background-color: rgb(0, 0, 29);
+    overflow-y: hidden;
 }
 
 /* Result Screen  */
@@ -52,12 +53,12 @@ body{
 
 .delete{
   display:flex;
-  justify-content: end;
+  justify-content: flex-end;
 }
 
 .delete p{
   font-size: x-large;
-  width: 24.5vw;
+  width: 25vw;
 }
 
 .tr{
